Fix the unresponsiveness on mobile while fetching the data

--- a/client/less/styles.less
+++ b/client/less/styles.less
@@ -75,7 +75,7 @@ ul {
 
     @media screen and (max-width: 375px) {
         main {
-            .whc(275px, 500px);
+            .whc(275px, calc(100% - 64px - 51px));
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
@@ -86,7 +86,7 @@ ul {
 
     @media screen and (min-width: 375px) {
         main {
-            .whc(100%, 500px);
+            .whc(100%, calc(100% - 64px - 51px));
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
@@ -128,7 +128,7 @@ ul {
 
     .aside-header-container {
         display: flex;
-        height: 10%;
+        height: 70px;
         align-items: center;
         margin: 0px 0px 0px 30px;
     }
@@ -180,13 +180,21 @@ ul {
     }
 
     @media screen and (max-width: 1200px) {
+        .aside-content-container ul {
+            padding: 0 30px;
+        }
+
         .list-item {
             display: block;
-            height: 100%;
+            //height: 100%;
             background-color: lightgrey;
             margin-bottom: 15px;
             padding: 10px;
             cursor: pointer;
+        }
+
+        .list-item:last-child {
+            margin-bottom: 0;
         }
     
         .list-item div {
